# StandardRecommendation

./: .gitignore  README.md
chatbot/: chatbot.py  document_store.py  extract_information.py
django_vue/: elec
django_vue/django_vue/: pyproject.toml
django_vue/django_vue/accounts/: models.py  urls.py  views.py
django_vue/django_vue/accounts/migrations/: 0001_initial.py
django_vue/django_vue/backend/: settings.py  urls.py
django_vue/django_vue/boards/: models.py  serializers.py  urls.py  views.py
django_vue/django_vue/boards/migrations/: 0001_initial.py  0002_favorite_comment.py  0003_alter_board_keyword.py
django_vue/django_vue/news/: apps.py  models.py  signals.py  urls.py  views.py
django_vue/django_vue/news/chatbot/: convert_docs_to_pdf.py  extract_information.py  main.py  recommend.py
django_vue/django_vue/news/chatbot/pdf_37__Multiple_radio_access_technology_aspects/: .~lock.37716-21-21-g10.pdf#
django_vue/django_vue/news/chatbot/unzip_21__Requirements/: 21801-i00.docx
django_vue/django_vue/news/chatbot/unzip_23__Technical_realization/: 23700-01-j00.docx  23700-03-j00.docx  23700-06-j00.docx
django_vue/django_vue/news/chatbot/unzip_24__Signalling_protocols_("stage_3")_-_user_equipment_to_network/: 24811-h10.docx  24812-010.docx
django_vue/django_vue/news/chatbot/unzip_26__CODECs/: 26802-h00.docx  26803-h00.docx  26805-h01.docx
django_vue/django_vue/news/chatbot/unzip_31__Subscriber_Identity_Module_(SIM___USIM)__IC_Cards__Test_specs_/: 31801-f10.docx  31822-i10.docx  31826-i00.docx
django_vue/django_vue/news/chatbot/unzip_33__Security_aspects/: 33700-28-i00.docx  33700-41-j00.docx  33701-j00.docx  33702-j00.docx
django_vue/django_vue/news/chatbot/unzip_38__Radio_technology_beyond_LTE/: 38717-01-01-h00.docx
django_vue/django_vue/news/crawling/: clustering_train.py  extract_keywords.py  keywords_save_to_csv.py  kmeans_clustering_results_centers.csv  link_to_standard_document.py  link_to_standard_series.py  news_data_crawling.py  summarize_gpt.py
django_vue/django_vue/news/migrations/: 0001_initial.py  0002_newskeywords.py  0002_remove_useraction_num_of_clicks.py  0003_alter_keywords_keyword.py  0003_rename_newskeywords_keywords.py  0004_alter_keywords_keyword_alter_topkeywords_keyword_and_more.py  0004_keywords_intensity.py  0005_alter_keywords_news_useraction.py  0006_topkeywords.py  0007_useraction_num_of_clicks.py
frontend/: package-lock.json  package.json
get_standard_document_and_transform/: extract_keywords.py  (+7 more)
pjt08/: README.md  mainPage.py  pyproject.toml
pjt08/etc/: crawling.py  dashboard_sub.py  document_store.py  preprocessing.py  spark_streaming_server.py
pjt08/pages/: chatbotPage.py  dashboard.py
(+32 files in other folders)
