[tool.poetry]
name = "django-vue"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.16"
djangorestframework = "^3.15.2"
dj-rest-auth = "^7.0.0"
django-allauth = "^65.2.0"
psycopg2 = "^2.9.10"
requests = "^2.32.3"
django-cors-headers = "^4.6.0"
selenium = "^4.26.1"
webdriver-manager = "^4.0.2"
openai = "^1.55.0"
transformers = "^4.46.3"
torch = "^2.5.1"
numpy = ">=1.22.4,<2"
networkx = "^3.4.2"
matplotlib = "^3.9.2"
fitz = "^0.0.1.dev2"
pymupdf = "^1.24.14"
langchain = "^0.3.8"
langchain-community = "^0.3.8"
langchain-openai = "^0.2.9"
pgvector = "^0.3.6"
sentence-transformers = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"